--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,25 @@ body {
 .quote::after {
   content: '"';
 }
+
+.favorites-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.favorite-card {
+  background-color: #f9f9f9;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 25%;
+  color: #121212;
+}
+.author {
+  font-style: italic;
+}
+
+#toggle-favorite-btn {
+  display: none;
+}
