--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,13 @@ body {
   font-style: italic;
 }
 
+.star-icon {
+  font-size: 30px;
+  color: yellow;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
 #toggle-favorite-btn {
   display: none;
 }
